--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
@@ -11,6 +15,45 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.add-baby-input {
+  padding: 0.5rem 0;
+  margin-bottom: 0.5rem;
+  background-color: white;
+  cursor: move;
+  opacity: 1;
+  min-width: 534px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-baby-name input {
+  color: inherit;
+  background: 0px center;
+  width: 100%;
+  grid-area: 1 / 2 / auto / auto;
+  font: inherit;
+  min-width: 2px;
+  border-color: hsl(0, 0%, 80%);
+  border-width: 0;
+  margin: 0px;
+  outline: 0px;
+  padding: 0 10px;
+}
+
+.add-baby-name {
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  background-color: transparent;
+}
+.add-baby-name button {
+  border: none;
+  border-left: solid 1px hsl(0, 0%, 80%);
+  background-color: transparent;
+  padding: 0 15px;
 }
 
 .App-header {
@@ -26,6 +69,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.css-319lph-ValueContainer {
+  min-width: 120px;
 }
 
 @keyframes App-logo-spin {
